redirección en index.html para que funcione con tu URL. Esto es necesario porque la redirección actual (gracias.html)
Se cambio: window.location.href = 'gracias.html'; por: window.location.href = '/automotora-del-cuareim/gracias.html';

--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                 button.classList.remove('loading');
 
                 if (data.result === 'success') {
-                    window.location.href = 'gracias.html';
+                    window.location.href = '/automotora-del-cuareim/gracias.html';
                 } else {
                     alert('Error: ' + (data.message || 'Respuesta inesperada del servidor'));
                 }
