--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Reserva tu prueba de manejo gratuita con Automotora del Cuareim y encuentra el vehículo usado perfecto con confianza">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' file:; script-src 'self' https://script.google.com https://www.youtube.com https://www.ytimg.com 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com data:; frame-src 'self' https://www.youtube.com; img-src 'self' file: data: https://via.placeholder.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' file:; script-src 'self' https://script.google.com https://www.youtube.com https://www.ytimg.com 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com data:; frame-src 'self' https://www.youtube.com; img-src 'self' file: data: https://via.placeholder.com; connect-src 'self' https://script.google.com;">
     <title>Automotora del Cuareim - Reserva Tu Prueba Gratis</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
