--- a/index.html
+++ b/index.html
@@ -657,14 +657,14 @@
             <div class="team-member">
                 <img src="Foto tati.jpg" alt="Tati Arbiza">
                 <h3>Tati Arbiza</h3>
-                <p><strong>CEO y Fundador</strong><br>20 años asegurando que cada usado sea una gran compra.</p>
-                <p class="hidden-story">Conoce mi historia: Empecé con un sueño y un garaje.</p>
+                <p><strong>CEO y Fundador</strong><br>37 años asegurando que cada usado sea una gran compra.</p>
+                <p class="hidden-story">Conoce mi historia: De un garaje a un concesionario.</p>
             </div>
             <div class="team-member">
                 <img src="Alvaro.png" alt="Álvaro Álvarez">
                 <h3>Álvaro Álvarez</h3>
-                <p><strong>Especialista en Ventas</strong><br>Mi meta es que encuentres el usado ideal para ti.</p>
-                <p class="hidden-story">Mi pasión: Hacer realidad tus sueños sobre ruedas.</p>
+                <p><strong>Intermediario</strong><br>Mi meta es que encuentres el usado ideal para ti.</p>
+                <p class="hidden-story">Mi pasión: Tu mejor aliado en compra y venta.</p>
             </div>
         </div>
     </div>
