--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                 <img src="Alvaro.png" alt="Álvaro Álvarez">
                 <h3>Álvaro Álvarez</h3>
                 <p><strong>Intermediario</strong><br>Mi meta es que encuentres el usado ideal para ti.</p>
-                <p class="hidden-story">Mi pasión: Tu mejor aliado en compra y venta.</p>
+                <p class="hidden-story">Tu mejor aliado en compra y venta.</p>
             </div>
         </div>
     </div>
