--- a/index.html
+++ b/index.html
@@ -574,12 +574,7 @@
     <div class="header" id="inicio">
         <div class="video-container">
             <div class="video-wrapper">
-                <script>
-    document.addEventListener('click', function() {
-        const iframe = document.querySelector('.video-wrapper iframe');
-        iframe.src = iframe.src.replace('muted=1', 'muted=0'); // Cambia a sonido activado
-    }, { once: true }); // Se ejecuta solo una vez
-</script>
+                <iframe src="https://www.youtube.com/embed/ABC123XYZ?autoplay=1&muted=1" allowfullscreen></iframe>
             </div>
         </div>
         <div class="form-container">
