--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
     <div class="header" id="inicio">
         <div class="video-container">
             <div class="video-wrapper">
-                <iframe src="https://www.youtube.com/embed/j8VZjoNnNxM=1&muted=1&rel=0&controls=1" allowfullscreen></iframe>
+                <iframe src="https://youtu.be/j8VZjoNnNxM?si=LokPhWarSCTdc97c" allowfullscreen></iframe>
             </div>
         </div>
         <div class="form-container">
