--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
     <div class="header" id="inicio">
         <div class="video-container">
             <div class="video-wrapper">
-                <iframe src="https://player.vimeo.com/video/1012164807?autoplay=1&muted=0&controls=1" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/1012164807?autoplay=1&muted=0&controls=1&title=0&byline=0&portrait=0" allowfullscreen></iframe>
             </div>
         </div>
         <div class="form-container">
@@ -610,11 +610,6 @@
                 <i class="fas fa-handshake"></i>
                 <h3>Financiamiento Seguro</h3>
                 <p>Opciones claras y accesibles para que tu usado esté al alcance de tu bolsillo.</p>
-            </div>
-            <div class="feature-item">
-                <i class="fas fa-shield-alt"></i>
-                <h3>Garantía de Satisfacción</h3>
-                <p>Respaldamos cada venta con garantías que te dan tranquilidad al comprar un usado.</p>
             </div>
             <div class="feature-item">
                 <i class="fas fa-dollar-sign"></i>
