--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Reserva tu prueba de manejo gratuita con Automotora del Cuareim y encuentra el vehículo usado perfecto con confianza">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://script.google.com 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com data:; frame-src 'self' https://player.vimeo.com; img-src 'self' data: https://via.placeholder.com; connect-src 'self' https://script.google.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://script.google.com 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com data:; img-src 'self' data: https://via.placeholder.com; connect-src 'self' https://script.google.com;">
     <title>Automotora del Cuareim - Reserva Tu Prueba Gratis</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,20 +75,44 @@
             transition: transform 0.4s ease;
         }
         .video-wrapper:hover { transform: scale(1.02); }
-        .video-wrapper iframe {
+        .video-wrapper video {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
             border: none;
+            object-fit: cover;
         }
-        /* Ocultar controles no deseados del reproductor de Vimeo */
-        .video-wrapper iframe {
-            pointer-events: auto; /* Permitir interacción con controles */
+        /* Personalizar controles del video */
+        .video-wrapper video::-webkit-media-controls {
+            display: flex;
+            justify-content: space-between;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 5px;
         }
-        .video-wrapper iframe .vp-controls > *:not(.playbar):not(.volume) {
-            display: none !important; /* Intentar ocultar barra de progreso y otros controles */
+        .video-wrapper video::-webkit-media-controls-enclosure {
+            overflow: hidden;
+        }
+        .video-wrapper video::-webkit-media-controls-panel {
+            display: flex;
+            width: auto;
+        }
+        /* Ocultar controles no deseados en Webkit (Chrome, Safari) */
+        .video-wrapper video::-webkit-media-controls-timeline,
+        .video-wrapper video::-webkit-media-controls-current-time-display,
+        .video-wrapper video::-webkit-media-controls-time-remaining-display,
+        .video-wrapper video::-webkit-media-controls-fullscreen-button,
+        .video-wrapper video::-webkit-media-controls-mute-button {
+            display: none !important;
+        }
+        /* Firefox */
+        .video-wrapper video::-moz-media-controls {
+            display: flex;
+        }
+        .video-wrapper video::-moz-media-controls-timeline,
+        .video-wrapper video::-moz-media-controls-fullscreen-button {
+            display: none !important;
         }
         .form-container {
             width: 50%;
@@ -581,7 +605,10 @@
     <div class="header" id="inicio">
         <div class="video-container">
             <div class="video-wrapper">
-                <iframe id="vimeo-video" src="https://player.vimeo.com/video/1012164807?autoplay=1&muted=0&controls=1&title=0&byline=0&portrait=0&background=0&pip=0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <video id="custom-video" autoplay controls>
+                    <source src="tu-video.mp4" type="video/mp4">
+                    Tu navegador no soporta el elemento de video.
+                </video>
             </div>
         </div>
         <div class="form-container">
@@ -769,18 +796,15 @@
             });
         });
 
-        // Intentar forzar reproducción automática con audio
+        // Forzar reproducción automática con audio para el video HTML5
         document.addEventListener('DOMContentLoaded', () => {
-            const video = document.getElementById('vimeo-video');
+            const video = document.getElementById('custom-video');
             if (video) {
-                video.setAttribute('allow', 'autoplay; fullscreen');
-                // Forzar reproducción automática
-                const playVideo = () => {
-                    video.contentWindow.postMessage('{"method":"play"}', 'https://player.vimeo.com');
-                };
-                video.addEventListener('load', playVideo);
-                // Intentar reproducir después de un pequeño retraso para evitar bloqueos
-                setTimeout(playVideo, 100);
+                video.play().catch(error => {
+                    console.error('Error al intentar reproducir automáticamente:', error);
+                    // Intentar reproducir nuevamente después de un pequeño retraso
+                    setTimeout(() => video.play(), 100);
+                });
             }
         });
     </script>
